--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -656,6 +656,7 @@ jpn:
     # in_name: "Abréviation incluse dans le nom de la personne"
     # included: "Incluse"
     # income_on: "Date d'entrée"
+    # income_reasons: "Income reasons"
     # incoming_deliveries: "Livraisons entrantes"
     # incoming_delivery_lines: "Lignes de livraisons entrantes"
     # incoming_delivery_modes: "Modes de livraisons entrantes"
@@ -776,6 +777,7 @@ jpn:
     # outgoing_payment_uses: "Parties de décaissements"
     # outgoing_payments: "Décaissements"
     # outgone_on: "Date de sortie"
+    # outgone_reasons: "Outgone reasons"
     # output_conveyors: "Convoyeur sortant"
     # owner: "Propriétaire"
     # owner_type: "Nature du propriétaire"
