--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -38,7 +38,7 @@ eng:
       # show: "Type d'évènement %{name}"
     animal_events:
       # edit: "Modifier un évènement"
-      # index: "Evènements"
+      # index: "Évènements"
       # new: "Créer un évènement"
       # show: "évènement %{name} commencé le %{started_at}"
     animal_groups:
