--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -36,7 +36,7 @@ fra:
       show: "Type d'évènement %{name}"
     animal_events:
       edit: "Modifier un évènement"
-      index: "Evènements"
+      index: "Évènements"
       new: "Créer un évènement"
       show: "évènement %{name} commencé le %{started_at}"
     animal_groups:
