--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -40,7 +40,7 @@ jpn:
       # show: "Type d'évènement %{name}"
     animal_events:
       # edit: "Modifier un évènement"
-      # index: "Evènements"
+      # index: "Évènements"
       # new: "Créer un évènement"
       # show: "évènement %{name} commencé le %{started_at}"
     animal_groups:
