--- a/config/locales/arb/countries.yml
+++ b/config/locales/arb/countries.yml
@@ -206,7 +206,7 @@ arb:
     sn: "علم السنغال السنغال"
     so: "علم الصومال الصومال"
     sr: "علم سورينام سورينام"
-    # ss: "Soudan du Sud"
+    # ss: "South Sudan"
     st: "علم ساو تومي وبرينسيبي ساو تومي وبرينسيبي"
     sv: "علم إلسلفادور إلسلفادور"
     sy: "علم سوريا سوريا"
