--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -3,7 +3,7 @@ arb:
     administrate_accountancy: "مدخل لوحدة المحاسبة" #?
     backup_company: "تطبيق / تحديث النسخ الاحتياطية"
     bookkeep: "مبادلة الاجراءات التجارية للمحاسبة"
-    # build_production_chains: "Construire des chaînes de production"
+    # build_production_chains: "Build production chains"
     cancel_sales_invoices: "الاحذ بالموجودات"
     change_prices_on_sales: "تغيير اسعار البيع"
     close_journals: "فتح واغلاق الدفاتر اليومية"
@@ -25,9 +25,9 @@ arb:
     mail_to_listings: "ادارة ارسال رسائل البريد الالكتروني بواسطة الاستخراج"
     manage_accounts: "ادارة الحسابات"
     manage_areas: "ادارة المناطق"
-    # manage_assets: "Gérer les immobilisations"
+    # manage_assets: "Manage assets"
     manage_bank_statements: "كشوفات البيانات الحسابية"
-    # manage_cash_transfers: "Gérer les virements internes"
+    # manage_cash_transfers: "Manage cash transfers"
     manage_cashes: "ادارة حسابات الخزينة"
     manage_custom_fields: "ادارة الحقول المتخصصة"
     manage_delays: "ادارة التأخير"
@@ -41,27 +41,27 @@ arb:
     manage_estimates: "انشاء وتعديل التقديرات"
     manage_events: "ادارة الاحداث"
     manage_financial_years: "ادارة وبدأ السنة المالية"
-    # manage_incoming_delivery_modes: "Gérer les modes de livraisons entrantes"
-    # manage_incoming_payment_modes: "Gérer les modes d’encaissement"
+    # manage_incoming_delivery_modes: "Manage incoming delivery modes"
+    # manage_incoming_payment_modes: "Manage incoming payment modes"
     manage_incoming_payments: "ادارة قواعد البيع"
     manage_inventories: "ادارة عمبيات الجرد"
     manage_journal_entries: "ادارة المدخلات"
     manage_journals: "ادارة وفتح واغلاق الدفاتر اليومية"
-    # manage_land_parcel_groups: "Gérer les groupes d’îlots"
+    # manage_land_parcel_groups: "Manage groups of land parcels"
     manage_land_parcels: "ادارة الهيئة"
     manage_listings: "ادارة المستخرج"
     manage_mandates: "ادارة التفويضات"
     manage_observations: "ادارة الملاحظات"
     manage_operations: "ادارة الاجراءات"
     manage_outgoing_deliveries: "ادارة انواع التسليم" #?
-    # manage_outgoing_delivery_modes: "Gérer les types de livraison"
-    # manage_outgoing_payment_modes: "Gérer les modes de décaissement"
-    # manage_outgoing_payments: "Gérer les décaissements"
+    # manage_outgoing_delivery_modes: "Manage outgoing delivery modes"
+    # manage_outgoing_payment_modes: "Manage disbursement modes"
+    # manage_outgoing_payments: "Manage disbursements"
     manage_payment_modes: "ادارة طرق الدفع" #?
     manage_prices: "ادارة الاموال"
     manage_product_categories: "ادارة فئات المنتجات"
     manage_products: "ادارة المنتجات"
-    # manage_purchase_natures: "Gérer les types d’achat"
+    # manage_purchase_natures: "Manage purchase natures"
     manage_purchases: "ادارة المشتريات"
     manage_sale_natures: "ادارة انواع البيع"
     manage_sales: "(ادارة المبيعات (الاوامر والطلبات والاسعار"
@@ -78,4 +78,4 @@ arb:
     __not_used__: "(الحق الافتراضي (متعذر بلوغه" #?
     print: "الطباعة" #?
     # __public__: "Public access"
-    # use_production_chains: "Utiliser les chaînes de production"
+    # use_production_chains: "Use production chains"
