--- a/config/locales/jpn/countries.yml
+++ b/config/locales/jpn/countries.yml
@@ -206,7 +206,7 @@ jpn:
     sn: "セネガル"
     so: "ソマリア"
     sr: "スリナム"
-    # ss: "Soudan du Sud"
+    # ss: "South Sudan"
     st: "サントメ・プリンシペ"
     sv: "エルサルバドル"
     sy: "シリア"
