--- a/config/locales/spa/currencies.yml
+++ b/config/locales/spa/currencies.yml
@@ -127,7 +127,7 @@ spa:
     PYG: "Guaraní paraguayo"
     QAR: "Rial qatarí"
     RON: "Leu rumano"
-    # RSD: "Dinar serbe"
+    # RSD: "Serbian Dinar"
     RUB: "Rublo ruso"
     RWF: "Franco ruandés"
     SAR: "Riyal saudí"
@@ -141,9 +141,9 @@ spa:
     SLL: "Leone de Sierra Leona"
     SOS: "Chelín somalí"
     SRD: "Dólar surinamés"
-    # SSP: "Livre sud-soudanaise"
+    # SSP: "South Sudanese Pound"
     STD: "Dobra de Santo Tomé y Príncipe"
-    # SVC: "Colon salvadorien"
+    # SVC: "El Salvador Colon"
     SYP: "Libra siria"
     SZL: "Lilangeni suazi"
     THB: "Baht tailandés"
@@ -160,7 +160,7 @@ spa:
     USD: "Dólar estadounidense"
     USN: "Dólar estadounidense (Siguiente día) (código de fondos)"
     USS: "Dólar estadounidense (Mismo día) (código de fondos)"
-    # UYI: "Peso uruguayen en unités indexées (URUIURUI)"
+    # UYI: "Uruguay Peso en Unidades Indexadas (URUIURUI)"
     UYU: "Peso uruguayo"
     UZS: "Som uzbeko"
     VEF: "Bolívar fuerte venezolano"
