--- a/config/locales/fra/support.yml
+++ b/config/locales/fra/support.yml
@@ -63,7 +63,7 @@ fra:
     export_as: "Exporter en %{exported}"
     items_per_page: "Éléments par page"
     menu: "Menu"
-    next: "Suivant"
+    next: "Suivant" #?
     no_records: "Aucun enregistrement"
     pagination:
       first: "Début"
@@ -71,7 +71,7 @@ fra:
       next: "Suivant"
       previous: "Précédent"
       showing_x_to_y_of_total: "Enregistrements %{x} à %{y} sur %{total}"
-    previous: "Précédent"
+    previous: "Précédent" #?
     x_per_page:
       one: "%{count} par page"
       other: "%{count} par page"
