correcting icon in view translating animals / events / dashboard adding enumerize translations for animals

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -647,6 +647,14 @@ eng:
     amount: "Amount with taxes"
     amount_to_add: "Total to add"
     amount_to_reduce: "Total to reduce"
+    animal_pie: "Animals by category"
+    animal_bar: "Animals by category"
+    animal_group_tabbox:
+      animals: "Animal"
+      cares: "Cares on animal"
+    animal_tabbox:
+      cares: "Cares"
+      childrens: "Childs"
     apply: "Apply"
     are_you_sure: "Are you sure you want to do this?"
     are_you_sure_you_want_to_confirm: "Are you sure you want to order"
@@ -759,6 +767,8 @@ eng:
     deliver: "Delivered on"
     deliveries: "Deliveries"
     delivery: "Delivery"
+    demo_bar: "Bar"
+    demo_pie: "Pie"
     departments: "Departments"
     deposit: "Deposit"
     depositable: "More informations"
@@ -878,9 +888,11 @@ eng:
     journals: "Journals"
     land_parcel_name: "Land parcel name"
     land_parcels: "Land parcels"
+    last_animals: "Last Birth"
     last_computed_balance: "Last computed balance"
     last_payment_amount: "Amount of the last payment"
     last_payment_date: "Date of the last payment"
+    last_events: "Last Events"
     left_balance_amount: "Left Balance Amount"
     letter: "Letter"
     letter_conclusion: "Please accept, Dear Madam, Dear Sir, the assurances of my highest consideration."
@@ -1040,6 +1052,7 @@ eng:
     personalized_mail: "Send a personalized mail"
     pertinence: "%{value}%"
     phone: "Pho."
+    placeholder: "Placeholder"
     planned_on: "Planned on"
     play: "Play"
     please_wait: "Please wait..."
